[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Debug/DebugInfoLabel.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="DebugInfoLabel" type="TextEdit"]
margin_right = 192.0
margin_bottom = 64.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_default_cursor_shape = 0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/background_color = Color( 0, 0, 0, 0.556863 )
readonly = true
syntax_highlighting = true
selecting_enabled = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 28.0
margin_bottom = 28.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_DebugInfoLabel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DebugInfoLabel_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
